--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,8 @@
 .error-msg{
   width: 100%;
   padding: 14px;
-  background-color: #dff0d8;
-  color: #468847;
+  background-color: #f50000;
+  color: #ffffff;
 }
 
 .link{
